# mpteval

./: .gitignore  .gitmodules  CHANGES.md  README.md  config.py  empty_voice_issue.ipynb  main.py  mpteval.yml  pyproject.toml  requirements.txt  setup.py
eval/: compute_peamt.py
helpers/: __init__.py  analysis.py  compute_metrics.py
mpteval/: __init__.py  articulation.py  dynamics.py  timing.py
notebooks/: _ph_create_data_revnoise.ipynb  compare_res_post_cleaning.ipynb  create_paper_tables.ipynb  metrics_demonstration.ipynb  poster_illustrate_articulation.ipynb  poster_illustrate_dynamics.ipynb  poster_illustrate_harmony.ipynb  poster_illustrate_timing.ipynb  poster_illustrate_zusammen.ipynb
results/: IR_frame.csv  IR_frame_241112_0212.csv  IR_note_offset.csv  IR_note_offset_241112_0212.csv  IR_note_offset_velocity.csv  musical_articulation.csv  musical_dynamics.csv  musical_harmony.csv  musical_harmony_241113_2250.csv  musical_timing.csv  musical_timing_241112_1439.csv  peamt.csv  revnoise_IR_frame.csv  revnoise_IR_note_offset.csv  revnoise_IR_note_offset_241112_0214_241112_0214.csv  revnoise_IR_note_offset_velocity.csv  revnoise_musical_articulation.csv  revnoise_musical_articulation_241112_1443_241112_1443.csv  revnoise_musical_dynamics.csv  revnoise_musical_dynamics_241112_0214_241112_0214.csv  revnoise_musical_harmony.csv  revnoise_musical_harmony_241113_2252_241113_2252.csv  revnoise_musical_timing.csv  revnoise_musical_timing_241112_1444_241112_1444.csv
tests/: test_articulation.py  test_dynamics.py  test_harmony.py  test_monophonic.py  test_timing.py
(+23 files in other folders)
