[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpteval"
version = "0.1.0"
authors = [
  { name="Patricia Hu" },
  { name="Luk치코 Samuel Mart치k" },
  { name="Carlos Cancino-Chac칩n" }
]
description = "Musically informed piano transcription metrics"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CPJKU/mpteval"
Issues = "https://github.com/CPJKU/mpteval/issues"
